--- a/Project.toml
+++ b/Project.toml
@@ -1,10 +1,22 @@
 name = "PracticalMATLABModelingWithSimulink"
 uuid = "719d214f-7b7d-41b8-9d05-87b061536b0e"
-authors = ["Abdulrhmn Ghanem <abdoghanem160@gmail.com> and contributors"]
+authors = ["Abdulrhmn Ghanem <research@abdulrhmnghanem.tech>"]
 version = "0.1.0"
 
+[deps]
+DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
+ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
+PlutoUI = "7f904dfe-b85e-4ff6-b463-dae2292396a8"
+
 [compat]
-julia = "1"
+DifferentialEquations = "7"
+ModelingToolkit = "8"
+Plots = "1"
+Pluto = "0.19"
+PlutoUI = "0.7"
+julia = "1.8"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
