--- a/Project.toml
+++ b/Project.toml
@@ -17,6 +17,7 @@ DifferentialEquations = "7"
 ModelingToolkit = "8"
 Plots = "1"
 Pluto = "0.19"
+PlutoSliderServer = "0.3"
 PlutoUI = "0.7"
 julia = "1.8"
 
