--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Abdulrhmn Ghanem <research@abdulrhmnghanem.tech>"]
 version = "0.1.0"
 
 [deps]
+DSP = "717857b8-e6f2-59f4-9121-6e50c889abd2"
 DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 DomainSets = "5b8099bc-c8ec-5219-889f-1d9e522a28bf"
@@ -16,6 +17,7 @@ Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
 PlutoSliderServer = "2fc8631c-6f24-4c5b-bca7-cbb509c42db4"
 PlutoUI = "7f904dfe-b85e-4ff6-b463-dae2292396a8"
 Polynomials = "f27b6e38-b328-58d1-80ce-0feddd5e7a45"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 SymPy = "24249f21-da20-56a4-8eb1-6a02cf4ae2e6"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
