Render and update notebook HTML output in CI (#4)
* Switch to `julia-buildpkg` action

* Publish the notebooks

* Create index page

* Unify project activation in notebooks

* Some updates to practical matlab notebooks

* Wrap up

* Restyled by whitespace (#5)

Co-authored-by: Restyled.io <commits@restyled.io>

* tidy

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,18 +20,29 @@ jobs:
         with:
           version: ${{ matrix.julia-version }}
 
+      - uses: py-actions/py-dependency-install@v4
+
+      - uses: julia-actions/julia-buildpkg@v1
+
       - name: Cache Pluto.jl cache
         uses: actions/cache@v2
         with:
-          path: |
-            .cache
+          path: .cache
           key: ${{ runner.os }}-julia
           restore-keys: |
             ${{ runner.os }}-julia
 
-      - name: Install Dependencies
-        run: |
-          julia -e 'using Pkg; Pkg.instantiate()'
-
       - name: Run build.jl
         run: julia --project=. build.jl
+
+      - name: Publish
+        uses: cpina/github-action-push-to-another-repository@main
+        env:
+          SSH_DEPLOY_KEY: ${{ secrets.SSH_DEPLOY_KEY }}
+        with:
+          source-directory: ".build"
+          destination-github-username: "ghnem"
+          destination-repository-name: "ghnem.github.io"
+          user-email: research@abdulrhmnghanem.tech
+          target-directory: modeling-and-control-books-in-julia
+          target-branch: main
