--- a/Project.toml
+++ b/Project.toml
@@ -26,6 +26,7 @@ SymPy = "24249f21-da20-56a4-8eb1-6a02cf4ae2e6"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
 [compat]
+BenchmarkTools = "1"
 DifferentialEquations = "7"
 ModelingToolkit = "8"
 Plots = "1"
