CompatHelper: add new compat entry for MethodOfLines at version 0.10, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -27,6 +27,7 @@ Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
 [compat]
 DifferentialEquations = "7"
+MethodOfLines = "0.10"
 ModelingToolkit = "8"
 Plots = "1"
 Pluto = "0.19"
