--- a/Project.toml
+++ b/Project.toml
@@ -27,6 +27,7 @@ Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
 [compat]
 DifferentialEquations = "7"
+Distributions = "0.25"
 ModelingToolkit = "8"
 Plots = "1"
 Pluto = "0.19"
