--- a/Project.toml
+++ b/Project.toml
@@ -26,16 +26,25 @@ SymPy = "24249f21-da20-56a4-8eb1-6a02cf4ae2e6"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
 [compat]
+BenchmarkTools = "1"
 DSP = "0.7"
 DifferentialEquations = "7"
+FFTW = "1"
+Distributions = "0.25"
 DomainSets = "0.7"
 ModelingToolkit = "8"
+MethodOfLines = "0.10"
+NonlinearSolve = "3"
+Optimization = "3"
 OptimizationBBO = "0.1"
 Plots = "1"
 Pluto = "0.19"
 PlutoSliderServer = "0.3"
 PlutoUI = "0.7"
+Polynomials = "4"
+StatsBase = "0.34"
 SymPy = "1, 2"
+Unitful = "1"
 julia = "1.8"
 
 [extras]
