CompatHelper: add new compat entry for DomainSets at version 0.7, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -30,6 +30,7 @@ BenchmarkTools = "1"
 DSP = "0.7"
 DifferentialEquations = "7"
 Distributions = "0.25"
+DomainSets = "0.7"
 FFTW = "1"
 MethodOfLines = "0.10"
 ModelingToolkit = "8"
