--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,9 @@ jobs:
       - name: Cache Pluto.jl cache
         uses: actions/cache@v2
         with:
-          path: .cache
+          path: |
+            .cache
+            .build
           key: cache-pluto-${{ github.event.repository.updated_at }}
           restore-keys: cache-pluto-
 
