--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,9 @@ on:
   push:
     branches:
       - main
+  schedule:
+    # once every five days at 00:00 UTC
+    - cron: "0 0 */5 * *"
 
 jobs:
   build:
