--- a/Project.toml
+++ b/Project.toml
@@ -32,6 +32,7 @@ DSP = "0.7"
 DifferentialEquations = "7"
 Distributions = "0.25"
 FFTW = "1"
+JuliaFormatter = "1"
 MethodOfLines = "0.10"
 ModelingToolkit = "8"
 NonlinearSolve = "3"
