--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
 
     strategy:
       matrix:
-        julia-version: [1.9]
+        julia-version: ["1.10"]
 
     steps:
       - uses: actions/checkout@v3
