--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Run build.jl
         run: julia --project=. build.jl
 
-      - name: normalize hrefs
+      - name: Normalize hrefs
         run: |
           sed -i 's/SysID\.jl\///g' .build/SysID.jl/index.html
           sed -i 's/PracticalModelingAndSimulation\.jl\///g' .build/PracticalModelingAndSimulation.jl/index.html
