--- a/Project.toml
+++ b/Project.toml
@@ -32,6 +32,7 @@ BenchmarkTools = "1"
 DSP = "0.7"
 DifferentialEquations = "7"
 Distributions = "0.25"
+DomainSets = "0.7"
 FFTW = "1"
 JuliaFormatter = "1"
 MethodOfLines = "0.10"
