--- a/Project.toml
+++ b/Project.toml
@@ -36,7 +36,7 @@ Distributions = "0.25"
 FFTW = "1"
 JuliaFormatter = "1"
 MethodOfLines = "0.10"
-ModelingToolkit = "8"
+ModelingToolkit = "8, 9"
 NonlinearSolve = "3"
 Optimization = "3"
 OptimizationBBO = "0.1, 0.2"
