--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+        with:
+          submodules: recursive
       - uses: julia-actions/cache@v1
 
       - uses: julia-actions/setup-julia@v1
@@ -43,6 +45,7 @@ jobs:
         run: |
           sed -i 's/SysID\.jl\///g' .build/SysID.jl/index.html
           sed -i 's/PracticalModelingAndSimulation\.jl\///g' .build/PracticalModelingAndSimulation.jl/index.html
+          sed -i 's/databook\.jl\///g' .build/databook.jl/index.html
 
       - name: Publish
         uses: cpina/github-action-push-to-another-repository@main
