--- a/Project.toml
+++ b/Project.toml
@@ -40,6 +40,7 @@ DataStructures = "0.18"
 DifferentialEquations = "7"
 Distributions = "0.25"
 FFTW = "1"
+ImageIO = "0.6"
 JuliaFormatter = "1"
 MethodOfLines = "0.10"
 ModelingToolkit = "8"
