--- a/Project.toml
+++ b/Project.toml
@@ -53,6 +53,7 @@ PlutoSliderServer = "0.3"
 PlutoUI = "0.7"
 Polynomials = "4"
 StatsBase = "0.34"
+StatsPlots = "0.15"
 SymPy = "1, 2"
 Unitful = "1"
 julia = "1.8"
