--- a/Project.toml
+++ b/Project.toml
@@ -37,6 +37,7 @@ Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
 [compat]
 BenchmarkTools = "1"
+Compat = "4"
 DSP = "0.7"
 DataStructures = "0.18"
 DifferentialEquations = "7"
