--- a/Project.toml
+++ b/Project.toml
@@ -41,6 +41,7 @@ DataStructures = "0.18"
 DifferentialEquations = "7"
 Distributions = "0.25"
 FFTW = "1"
+FileIO = "1"
 JuliaFormatter = "1"
 ModelingToolkit = "8"
 NonlinearSolve = "3"
