--- a/Project.toml
+++ b/Project.toml
@@ -42,7 +42,7 @@ DifferentialEquations = "7"
 Distributions = "0.25"
 FFTW = "1"
 JuliaFormatter = "1"
-ModelingToolkit = "8"
+ModelingToolkit = "8, 9"
 NonlinearSolve = "3"
 Optimization = "3"
 OptimizationBBO = "0.1, 0.2"
