--- a/Project.toml
+++ b/Project.toml
@@ -42,6 +42,7 @@ DifferentialEquations = "7"
 Distributions = "0.25"
 FFTW = "1"
 JuliaFormatter = "1"
+MAT = "0.10"
 ModelingToolkit = "8"
 NonlinearSolve = "3"
 Optimization = "3"
