--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,8 @@ jobs:
       - uses: actions/checkout@v3
         with:
           submodules: recursive
+          lfs: true
+
       - uses: julia-actions/cache@v1
 
       - uses: julia-actions/setup-julia@v1
