--- a/Project.toml
+++ b/Project.toml
@@ -53,6 +53,7 @@ Pluto = "0.19"
 PlutoSliderServer = "0.3"
 PlutoUI = "0.7"
 Polynomials = "4"
+Sound = "0.5"
 StatsBase = "0.34"
 SymPy = "1, 2"
 Unitful = "1"
