--- a/Project.toml
+++ b/Project.toml
@@ -38,13 +38,20 @@ Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
 [compat]
 BenchmarkTools = "1"
-DSP = "0.7"
+Compat = "4"
 DataStructures = "0.18"
 DifferentialEquations = "7"
 Distributions = "0.25"
+DSP = "0.7"
 FFTW = "1"
+FileIO = "1"
+ImageCore = "0.9"
+ImageIO = "0.6"
+Images = "0.25"
+ImageShow = "0.3"
 JuliaFormatter = "1"
-ModelingToolkit = "8"
+MAT = "0.10"
+ModelingToolkit = "8, 9"
 NonlinearSolve = "3"
 Optimization = "3"
 OptimizationBBO = "0.1, 0.2"
@@ -55,9 +62,10 @@ PlutoUI = "0.7"
 Polynomials = "4"
 Sound = "0.5"
 StatsBase = "0.34"
+StatsPlots = "0.15"
 SymPy = "1, 2"
 Unitful = "1"
-julia = "1.8"
+julia = "1.10"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
