CompatHelper: bump compat for ImageCore to 0.10, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -39,16 +39,16 @@ Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 [compat]
 BenchmarkTools = "1"
 Compat = "4"
+DSP = "0.7"
 DataStructures = "0.18"
 DifferentialEquations = "7"
 Distributions = "0.25"
-DSP = "0.7"
 FFTW = "1"
 FileIO = "1"
-ImageCore = "0.9"
+ImageCore = "0.9, 0.10"
 ImageIO = "0.6"
-Images = "0.25"
 ImageShow = "0.3"
+Images = "0.25"
 JuliaFormatter = "1"
 MAT = "0.10"
 ModelingToolkit = "8, 9"
