--- a/Project.toml
+++ b/Project.toml
@@ -18,8 +18,10 @@ ImageCore = "a09fc81d-aa75-5fe9-8630-4744c3626534"
 ImageIO = "82e4d734-157c-48bb-816b-45c225c6df19"
 ImageShow = "4e3cecfd-b093-5904-9786-8bbb286a6a31"
 Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
+Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 JuliaFormatter = "98e50ef6-434e-11e9-1051-2b60c6c9e899"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+LsqFit = "2fda8390-95c7-5789-9bda-21331edee243"
 MAT = "23992714-dd62-5051-b70f-ba57cb901cac"
 ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
 NonlinearSolve = "8913a72c-1f9b-4ce2-8d82-65094dcecaec"
@@ -39,16 +41,16 @@ Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 [compat]
 BenchmarkTools = "1"
 Compat = "4"
+DSP = "0.7"
 DataStructures = "0.18"
 DifferentialEquations = "7"
 Distributions = "0.25"
-DSP = "0.7"
 FFTW = "1"
 FileIO = "1"
 ImageCore = "0.9"
 ImageIO = "0.6"
-Images = "0.25"
 ImageShow = "0.3"
+Images = "0.25"
 JuliaFormatter = "1"
 MAT = "0.10"
 ModelingToolkit = "8, 9"
