CompatHelper: add new compat entry for Interpolations at version 0.15, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -51,6 +51,7 @@ ImageCore = "0.9"
 ImageIO = "0.6"
 ImageShow = "0.3"
 Images = "0.25"
+Interpolations = "0.15"
 JuliaFormatter = "1"
 MAT = "0.10"
 ModelingToolkit = "8, 9"
