CompatHelper: add new compat entry for LsqFit at version 0.15, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -52,6 +52,7 @@ ImageIO = "0.6"
 ImageShow = "0.3"
 Images = "0.25"
 JuliaFormatter = "1"
+LsqFit = "0.15"
 MAT = "0.10"
 ModelingToolkit = "8, 9"
 NonlinearSolve = "3"
