--- a/Project.toml
+++ b/Project.toml
@@ -25,6 +25,7 @@ LsqFit = "2fda8390-95c7-5789-9bda-21331edee243"
 MAT = "23992714-dd62-5051-b70f-ba57cb901cac"
 ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
 NonlinearSolve = "8913a72c-1f9b-4ce2-8d82-65094dcecaec"
+Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
 OptimizationBBO = "3e6eede4-6085-4f62-9a71-46d9bc1eb92b"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
