CompatHelper: add new compat entry for Optim at version 1, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -56,6 +56,7 @@ JuliaFormatter = "1"
 MAT = "0.10"
 ModelingToolkit = "8, 9"
 NonlinearSolve = "3"
+Optim = "1"
 Optimization = "3"
 OptimizationBBO = "0.1, 0.2"
 Plots = "1"
