--- a/Project.toml
+++ b/Project.toml
@@ -23,6 +23,8 @@ JuliaFormatter = "98e50ef6-434e-11e9-1051-2b60c6c9e899"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LsqFit = "2fda8390-95c7-5789-9bda-21331edee243"
 MAT = "23992714-dd62-5051-b70f-ba57cb901cac"
+MLDatasets = "eb30cadb-4394-5ae3-aed4-317e484a6458"
+Metrics = "cb9f3049-315b-4f05-b90c-a8adaec4da78"
 ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
 NonlinearSolve = "8913a72c-1f9b-4ce2-8d82-65094dcecaec"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
@@ -64,7 +66,6 @@ PlutoSliderServer = "0.3"
 PlutoUI = "0.7"
 Polynomials = "4"
 Sound = "0.5"
-StatsBase = "0.34"
 StatsPlots = "0.15"
 SymPy = "1, 2"
 Unitful = "1"
