--- a/Project.toml
+++ b/Project.toml
@@ -56,6 +56,7 @@ ImageShow = "0.3"
 Images = "0.25"
 JuliaFormatter = "1"
 MAT = "0.10"
+MLDatasets = "0.7"
 ModelingToolkit = "8, 9"
 NonlinearSolve = "3"
 Optimization = "3"
