CompatHelper: add new compat entry for JuMP at version 1, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -55,6 +55,7 @@ ImageCore = "0.9"
 ImageIO = "0.6"
 ImageShow = "0.3"
 Images = "0.25"
+JuMP = "1"
 JuliaFormatter = "1"
 MAT = "0.10"
 MLDatasets = "0.7"
