CompatHelper: add new compat entry for StatsBase at version 0.34, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -69,6 +69,7 @@ PlutoSliderServer = "0.3"
 PlutoUI = "0.7"
 Polynomials = "4"
 Sound = "0.5"
+StatsBase = "0.34"
 StatsPlots = "0.15"
 SymPy = "1, 2"
 Unitful = "1"
