--- a/Project.toml
+++ b/Project.toml
@@ -41,6 +41,7 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
 SymPy = "24249f21-da20-56a4-8eb1-6a02cf4ae2e6"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
+WaterLily = "ed894a53-35f9-47f1-b17f-85db9237eebd"
 
 [compat]
 BenchmarkTools = "1"
