CompatHelper: add new compat entry for DataFrames at version 1, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -53,6 +53,7 @@ WaterLily = "ed894a53-35f9-47f1-b17f-85db9237eebd"
 BenchmarkTools = "1"
 Compat = "4"
 DSP = "0.7"
+DataFrames = "1"
 DataStructures = "0.18"
 DifferentialEquations = "7"
 Distributions = "0.25"
