CompatHelper: add new compat entry for MLJScikitLearnInterface at version 0.7, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -65,6 +65,7 @@ Images = "0.25"
 JuliaFormatter = "1"
 MAT = "0.10"
 MLDatasets = "0.7"
+MLJScikitLearnInterface = "0.7"
 Metrics = "0.1"
 ModelingToolkit = "8, 9"
 NonlinearSolve = "3"
