CompatHelper: add new compat entry for MultivariateStats at version 0.10, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -67,6 +67,7 @@ MAT = "0.10"
 MLDatasets = "0.7"
 Metrics = "0.1"
 ModelingToolkit = "8, 9"
+MultivariateStats = "0.10"
 NonlinearSolve = "3"
 Optimization = "3"
 OptimizationBBO = "0.1, 0.2"
