--- a/Project.toml
+++ b/Project.toml
@@ -54,6 +54,7 @@ BenchmarkTools = "1"
 Compat = "4"
 DSP = "0.7"
 DataStructures = "0.18"
+DecisionTree = "0.12"
 DifferentialEquations = "7"
 Distributions = "0.25"
 FFTW = "1"
