chore: compat and formatting

--- a/Project.toml
+++ b/Project.toml
@@ -13,7 +13,6 @@ DecisionTree = "7806a523-6efd-50cb-b5f6-3fa6f1930dbb"
 DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
 Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
-DomainSets = "5b8099bc-c8ec-5219-889f-1d9e522a28bf"
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 ImageCore = "a09fc81d-aa75-5fe9-8630-4744c3626534"
@@ -53,21 +52,32 @@ WaterLily = "ed894a53-35f9-47f1-b17f-85db9237eebd"
 BenchmarkTools = "1"
 Compat = "4"
 DSP = "0.7"
+DataFrames = "1"
 DataStructures = "0.18"
+DecisionTree = "0.12"
 DifferentialEquations = "7"
+Distances = "0.10"
 Distributions = "0.25"
 FFTW = "1"
 FileIO = "1"
-ImageCore = "0.9"
+ImageCore = "0.9, 0.10"
 ImageIO = "0.6"
 ImageShow = "0.3"
-Images = "0.25"
+Images = "0.25, 0.26"
+Interpolations = "0.15"
+JuMP = "1"
 JuliaFormatter = "1"
+LsqFit = "0.15"
 MAT = "0.10"
 MLDatasets = "0.7"
+MLJ = "0.20"
+MLJDecisionTreeInterface = "0.4"
+MLJScikitLearnInterface = "0.7"
 Metrics = "0.1"
 ModelingToolkit = "8, 9"
+MultivariateStats = "0.10"
 NonlinearSolve = "3"
+Optim = "1"
 Optimization = "3"
 OptimizationBBO = "0.1, 0.2"
 Plots = "1"
@@ -76,9 +86,11 @@ PlutoSliderServer = "0.3"
 PlutoUI = "0.7"
 Polynomials = "4"
 Sound = "0.5"
+StatsBase = "0.34"
 StatsPlots = "0.15"
 SymPy = "1, 2"
 Unitful = "1"
+WaterLily = "1"
 julia = "1.10"
 
 [extras]
