chore: compat and formatting

--- a/Project.toml
+++ b/Project.toml
@@ -52,22 +52,33 @@ WaterLily = "ed894a53-35f9-47f1-b17f-85db9237eebd"
 [compat]
 BenchmarkTools = "1"
 Compat = "4"
-DSP = "0.7"
+DataFrames = "1"
 DataStructures = "0.18"
+DecisionTree = "0.12"
 DifferentialEquations = "7"
+Distances = "0.10"
 Distributions = "0.25"
+DSP = "0.7"
 FFTW = "1"
 FileIO = "1"
-ImageCore = "0.9"
+ImageCore = "0.9, 0.10"
 ImageIO = "0.6"
+Images = "0.25, 0.26"
 ImageShow = "0.3"
-Images = "0.25"
+Interpolations = "0.15"
 JuliaFormatter = "1"
+JuMP = "1"
+LsqFit = "0.15"
 MAT = "0.10"
-MLDatasets = "0.7"
 Metrics = "0.1"
+MLDatasets = "0.7"
+MLJ = "0.20"
+MLJDecisionTreeInterface = "0.4"
+MLJScikitLearnInterface = "0.7"
 ModelingToolkit = "8, 9"
+MultivariateStats = "0.10"
 NonlinearSolve = "3"
+Optim = "1"
 Optimization = "3"
 OptimizationBBO = "0.1, 0.2"
 Plots = "1"
@@ -76,9 +87,11 @@ PlutoSliderServer = "0.3"
 PlutoUI = "0.7"
 Polynomials = "4"
 Sound = "0.5"
+StatsBase = "0.34"
 StatsPlots = "0.15"
 SymPy = "1, 2"
 Unitful = "1"
+WaterLily = "1"
 julia = "1.10"
 
 [extras]
