databook: start chapter 6

--- a/Project.toml
+++ b/Project.toml
@@ -4,7 +4,9 @@ authors = ["Abdulrhmn Ghanem <research@abdulrhmnghanem.tech>"]
 version = "0.1.0"
 
 [deps]
+BSON = "fbb218c0-5317-5bc6-957e-2ee96dd4b1f0"
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
+CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
 Compat = "34da2185-b29b-5c13-b0c7-acf172513d20"
 DSP = "717857b8-e6f2-59f4-9121-6e50c889abd2"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
@@ -15,6 +17,7 @@ Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
+Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 ImageCore = "a09fc81d-aa75-5fe9-8630-4744c3626534"
 ImageIO = "82e4d734-157c-48bb-816b-45c225c6df19"
 ImageShow = "4e3cecfd-b093-5904-9786-8bbb286a6a31"
@@ -47,6 +50,7 @@ StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
 SymPy = "24249f21-da20-56a4-8eb1-6a02cf4ae2e6"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 WaterLily = "ed894a53-35f9-47f1-b17f-85db9237eebd"
+cuDNN = "02a925ec-e4fe-4b08-9a7e-0d78e3d38ccd"
 
 [compat]
 BenchmarkTools = "1"
@@ -64,7 +68,7 @@ ImageCore = "0.9, 0.10"
 ImageIO = "0.6"
 ImageShow = "0.3"
 Images = "0.25, 0.26"
-Interpolations = "0.15"
+Interpolations = "0.14"
 JuMP = "1"
 JuliaFormatter = "1"
 LsqFit = "0.15"
@@ -86,7 +90,7 @@ PlutoSliderServer = "0.3"
 PlutoUI = "0.7"
 Polynomials = "4"
 Sound = "0.5"
-StatsBase = "0.34"
+StatsBase = "0.33"
 StatsPlots = "0.15"
 SymPy = "1, 2"
 Unitful = "1"
