CompatHelper: add new compat entry for Flux at version 0.14, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -64,6 +64,7 @@ Distances = "0.10"
 Distributions = "0.25"
 FFTW = "1"
 FileIO = "1"
+Flux = "0.14"
 ImageCore = "0.9, 0.10"
 ImageIO = "0.6"
 ImageShow = "0.3"
