--- a/Project.toml
+++ b/Project.toml
@@ -68,7 +68,7 @@ ImageCore = "0.9, 0.10"
 ImageIO = "0.6"
 ImageShow = "0.3"
 Images = "0.25, 0.26"
-Interpolations = "0.14"
+Interpolations = "0.14, 0.15"
 JuMP = "1"
 JuliaFormatter = "1"
 LsqFit = "0.15"
