--- a/Project.toml
+++ b/Project.toml
@@ -90,7 +90,7 @@ PlutoSliderServer = "0.3"
 PlutoUI = "0.7"
 Polynomials = "4"
 Sound = "0.5"
-StatsBase = "0.33"
+StatsBase = "0.33, 0.34"
 StatsPlots = "0.15"
 SymPy = "1, 2"
 Unitful = "1"
