databook: 6.1 - generate and cache training data

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,6 +36,7 @@ jobs:
           path: |
             .cache
             .build
+            src/databook.jl/ks.jld2
           key: cache-pluto
           restore-keys: cache-pluto
 
