CompatHelper: add new compat entry for JLD2 at version 0.4, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -70,6 +70,7 @@ ImageIO = "0.6"
 ImageShow = "0.3"
 Images = "0.25, 0.26"
 Interpolations = "0.14"
+JLD2 = "0.4"
 JuMP = "1"
 JuliaFormatter = "1"
 LsqFit = "0.15"
