CompatHelper: add new compat entry for ProgressLogging at version 0.1, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -91,6 +91,7 @@ Pluto = "0.19"
 PlutoSliderServer = "0.3"
 PlutoUI = "0.7"
 Polynomials = "4"
+ProgressLogging = "0.1"
 Sound = "0.5"
 StatsBase = "0.33"
 StatsPlots = "0.15"
