CompatHelper: bump compat for OptimizationBBO to 0.3, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -85,7 +85,7 @@ MultivariateStats = "0.10"
 NonlinearSolve = "3"
 Optim = "1"
 Optimization = "3"
-OptimizationBBO = "0.1, 0.2"
+OptimizationBBO = "0.1, 0.2, 0.3"
 Plots = "1"
 Pluto = "0.19"
 PlutoSliderServer = "0.3"
